# WinuxCmd

./: .gitignore  .mailmap  CMakeLists.txt  README-zh.md  README.md
DOCS/: README.md  README_zh.md
tests/: CMakeLists.txt
tests/framework/: pipeline.cpp  wctest.h
tests/scripts/: winux_activate_profile_cleanup_test.ps1  winux_command_discovery_test.ps1  winux_installer_root_discovery_test.ps1  winux_winget_discovery_test.ps1
tests/unit/arch/: arch_unit_test.cpp
tests/unit/b2sum/: b2sum_unit_test.cpp
tests/unit/base32/: base32_unit_test.cpp
tests/unit/base64/: base64_unit_test.cpp
tests/unit/basename/: basename_unit_test.cpp
tests/unit/basenc/: basenc_unit_test.cpp
tests/unit/cal/: cal_unit_test.cpp
tests/unit/cat/: cat_unit_test.cpp
tests/unit/chcon/: chcon_unit_test.cpp
tests/unit/chgrp/: chgrp_unit_test.cpp
tests/unit/chmod/: chmod_unit_test.cpp
tests/unit/chown/: chown_unit_test.cpp
tests/unit/chroot/: chroot_unit_test.cpp
tests/unit/cksum/: cksum_unit_test.cpp
tests/unit/clear/: clear_unit_test.cpp
tests/unit/cmp/: cmp_unit_test.cpp
tests/unit/col/: col_unit_test.cpp
tests/unit/column/: column_unit_test.cpp
tests/unit/comm/: comm_unit_test.cpp
tests/unit/cp/: cp_unit_test.cpp
tests/unit/cpio/: cpio_unit_test.cpp
tests/unit/csplit/: csplit_unit_test.cpp
tests/unit/cut/: cut_unit_test.cpp
tests/unit/d2u/: d2u_unit_test.cpp
tests/unit/date/: date_unit_test.cpp
tests/unit/dd/: dd_unit_test.cpp
tests/unit/df/: df_unit_test.cpp
tests/unit/diff/: diff_unit_test.cpp
tests/unit/diff3/: diff3_unit_test.cpp
tests/unit/dir/: dir_unit_test.cpp
tests/unit/dircolors/: dircolors_unit_test.cpp
tests/unit/dirname/: dirname_unit_test.cpp
tests/unit/dos2unix/: dos2unix_unit_test.cpp
tests/unit/du/: du_unit_test.cpp
tests/unit/echo/: echo_unit_test.cpp
tests/unit/env/: env_unit_test.cpp
tests/unit/expand/: expand_unit_test.cpp
tests/unit/factor/: factor_unit_test.cpp
tests/unit/false/: false_unit_test.cpp
tests/unit/file/: file_unit_test.cpp
tests/unit/find/: find_unit_test.cpp
tests/unit/fmt/: fmt_unit_test.cpp
tests/unit/fold/: fold_unit_test.cpp
tests/unit/free/: free_unit_test.cpp
tests/unit/getconf/: getconf_unit_test.cpp
tests/unit/grep/: grep_unit_test.cpp
tests/unit/groups/: groups_unit_test.cpp
tests/unit/head/: head_unit_test.cpp
tests/unit/hexdump/: hexdump_unit_test.cpp
tests/unit/hmac256/: hmac256_unit_test.cpp
tests/unit/hostid/: hostid_unit_test.cpp
tests/unit/hostname/: hostname_unit_test.cpp
tests/unit/id/: id_unit_test.cpp
tests/unit/infocmp/: infocmp_unit_test.cpp
tests/unit/install/: install_unit_test.cpp
tests/unit/join/: join_unit_test.cpp
tests/unit/jq/: jq_unit_test.cpp
tests/unit/kill/: kill_unit_test.cpp
tests/unit/less/: less_unit_test.cpp
tests/unit/link/: link_unit_test.cpp
tests/unit/ln/: ln_unit_test.cpp
tests/unit/locale/: locale_unit_test.cpp
tests/unit/logname/: logname_unit_test.cpp
tests/unit/ls/: ls_unit_test.cpp
tests/unit/md5sum/: md5sum_unit_test.cpp
tests/unit/mkdir/: mkdir_unit_test.cpp
tests/unit/mkfifo/: mkfifo_unit_test.cpp
tests/unit/mknod/: mknod_unit_test.cpp
tests/unit/mktemp/: mktemp_unit_test.cpp
tests/unit/more/: more_unit_test.cpp
tests/unit/mpicalc/: mpicalc_unit_test.cpp
tests/unit/mv/: mv_unit_test.cpp
tests/unit/nice/: nice_unit_test.cpp
tests/unit/nl/: nl_unit_test.cpp
tests/unit/nohup/: nohup_unit_test.cpp
tests/unit/nproc/: nproc_unit_test.cpp
tests/unit/numfmt/: numfmt_unit_test.cpp
tests/unit/od/: od_unit_test.cpp
tests/unit/paste/: paste_unit_test.cpp
tests/unit/patch/: patch_unit_test.cpp
tests/unit/pathchk/: pathchk_unit_test.cpp
tests/unit/pinky/: pinky_unit_test.cpp
tests/unit/pr/: pr_unit_test.cpp
tests/unit/printenv/: printenv_unit_test.cpp
tests/unit/printf/: printf_unit_test.cpp
tests/unit/ps/: ps_unit_test.cpp
tests/unit/ptx/: ptx_unit_test.cpp
tests/unit/pwd/: pwd_unit_test.cpp
tests/unit/readlink/: readlink_unit_test.cpp
tests/unit/realpath/: realpath_unit_test.cpp
tests/unit/reset/: reset_unit_test.cpp
tests/unit/rm/: rm_unit_test.cpp
tests/unit/rmdir/: rmdir_unit_test.cpp
tests/unit/runcon/: runcon_unit_test.cpp
tests/unit/sdiff/: sdiff_unit_test.cpp
tests/unit/sed/: sed_unit_test.cpp
tests/unit/seq/: seq_unit_test.cpp
tests/unit/sha1sum/: sha1sum_unit_test.cpp
tests/unit/sha224sum/: sha224sum_unit_test.cpp
tests/unit/sha256sum/: sha256sum_unit_test.cpp
tests/unit/sha384sum/: sha384sum_unit_test.cpp
tests/unit/sha512sum/: sha512sum_unit_test.cpp
tests/unit/shred/: shred_unit_test.cpp
tests/unit/shuf/: shuf_unit_test.cpp
tests/unit/sleep/: sleep_unit_test.cpp
tests/unit/sort/: sort_unit_test.cpp
tests/unit/split/: split_unit_test.cpp
tests/unit/stat/: stat_unit_test.cpp
tests/unit/stdbuf/: stdbuf_unit_test.cpp
tests/unit/strings/: strings_unit_test.cpp
tests/unit/stty/: stty_unit_test.cpp
tests/unit/sum/: sum_unit_test.cpp
tests/unit/sync/: sync_unit_test.cpp
tests/unit/tac/: tac_unit_test.cpp
tests/unit/tail/: tail_unit_test.cpp
tests/unit/tee/: tee_unit_test.cpp
tests/unit/test/: test_unit_test.cpp
tests/unit/test_bracket/: test_bracket_unit_test.cpp
tests/unit/tic/: tic_unit_test.cpp
tests/unit/timeout/: timeout_unit_test.cpp
tests/unit/toe/: toe_unit_test.cpp
tests/unit/touch/: touch_unit_test.cpp
tests/unit/tput/: tput_unit_test.cpp
tests/unit/tr/: tr_unit_test.cpp
tests/unit/tree/: tree_unit_test.cpp
tests/unit/true/: true_unit_test.cpp
tests/unit/truncate/: truncate_unit_test.cpp
tests/unit/tsort/: tsort_unit_test.cpp
tests/unit/tty/: tty_unit_test.cpp
tests/unit/tzset/: tzset_unit_test.cpp
tests/unit/u2d/: u2d_unit_test.cpp
tests/unit/uname/: uname_unit_test.cpp
tests/unit/unexpand/: unexpand_unit_test.cpp
tests/unit/uniq/: uniq_unit_test.cpp
tests/unit/unix2dos/: unix2dos_unit_test.cpp
tests/unit/unlink/: unlink_unit_test.cpp
tests/unit/uptime/: uptime_unit_test.cpp
tests/unit/users/: users_unit_test.cpp
tests/unit/vdir/: vdir_unit_test.cpp
(+325 files in other folders)
